# moonforge

./: .clang-format  .clangd  .gitignore  .luarc.json  CMakeLists.txt  NOTES.txt  README.md  TODO.txt  as.c  as.h  as_wrap.h  br.sh  build-run.sh  const.h  deps.sh  iss.json  main.c  mf.c  mf.h  mf.sh  mf_lua.h  mf_lua.lua  mflib.lua  mfx.lua  midi.lua  midi2.lua  pa_wrap.h  pipe_keyboard.sh  pipe_sine.sh  pkg.sh  pt.sh  pt2.sh  pt3.sh  run.sh  todo.txt  user.c  user.h
.cache/clangd/index/: main.c.C64CCD822313EE7E.idx  mf.c.D2622F0B04C30C16.idx  mf.h.7209128603791196.idx  user.c.457F366729AFC50E.idx  user.h.2B8E0CDED6CC8AB0.idx
doc/: API.md
examples/: alice.lua  beep.lua  blop.lua  custom_wave.lua  custom_wave_live.lua  delay.lua  envelope.lua  err.lua  fuck.lua  iss.lua  iss2.lua  json.lua  lfo.lua  lowpass.lua  lunarocean.lua  mf.lua  mfxx.lua  midi.lua  midi2.lua  moonchurch.lua  pipe.lua  pipe2.lua  pipe_keyboard.lua  pipe_midi_posix.lua  pipe_midi_simple.lua  pipe_read.lua  rec_test.lua  t1.lua  t2.lua  test.lua  test_delay.lua  test_lowpass.lua  track1.lua  tracker.lua  trem.lua  x.lua  z.lua
lua_include/: mflib.lua  mflib.old.lua
scripts/: arp.lua  bakk.lua  brainsim.lua  exo.lua  get.lua  godot.lua  mfo.lua  phrasing.lua  scanner.lua  sqib.lua  test.lua
scripts/demos/: bells.lua  exo.lua  sqib.lua
scripts/examples/: lfo.lua  percussion.lua  phrase.lua  random.lua  rest.lua
scripts/tracks/: chok.lua
src/: as.c  as.h  audio.h  config.h  const.h  delay.c  delay.h  globals.h  lowpass.c  lowpass.h  luaBinds.h  main.c  mf.c  mf.h  pa.h  recording.c  recording.h  synth.h  util.c  util.h  vis.c  vis.h  vis_cli.h
